# agro-app

./: Makefile  Procfile  README.md  fly.toml  gunicorn.conf.py  pyproject.toml  requirements.txt
agro_app/: __init__.py  config.py
agro_app/api/: __init__.py  database.py  entrypoints.py  models.py
swagger/: openapi2.json  openapi2.yaml
tests/: fixtures.py  test_health_check.py
